--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
-    <title>vue-elema</title>
-    <style>
-        * {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><title>jiayi</title><style>* {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -38,11 +31,4 @@
         }
         .fade-enter, .fade-leave {
           opacity: 0;
-        }
-    </style>
-  </head>
-  <body>
-    <router-view transition="fade" transition-mode="out-in" keep-alive></router-view>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+        }</style></head><body><router-view transition=fade transition-mode=out-in keep-alive></router-view><script type=text/javascript src=/static/js/manifest.88304d2034c967593990.js></script><script type=text/javascript src=/static/js/vendor.0659917127243147e9e4.js></script><script type=text/javascript src=/static/js/app.45e60a73e75f740a8ca6.js></script></body></html>
