--- a/index.html
+++ b/index.html
@@ -31,4 +31,4 @@
         }
         .fade-enter, .fade-leave {
           opacity: 0;
-        }</style></head><body><router-view transition=fade transition-mode=out-in keep-alive></router-view><script type=text/javascript src=/static/js/manifest.88304d2034c967593990.js></script><script type=text/javascript src=/static/js/vendor.0659917127243147e9e4.js></script><script type=text/javascript src=/static/js/app.45e60a73e75f740a8ca6.js></script></body></html>
+        }</style></head><body><router-view transition=fade transition-mode=out-in keep-alive></router-view><script type=text/javascript src=/static/js/manifest.88304d2034c967593990.js></script><script type=text/javascript src=static/js/vendor.0659917127243147e9e4.js></script><script type=text/javascript src=static/js/app.45e60a73e75f740a8ca6.js></script></body></html>
