--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><base href="vue-elema/"><meta charset=utf-8><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><title>jiayi</title><style>* {
+<!DOCTYPE html><html><head><base href="https://jiayisheji.github.io/vue-elema/"><meta charset=utf-8><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><title>jiayi</title><style>* {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
